--- a/styles/app.css
+++ b/styles/app.css
@@ -1285,6 +1285,10 @@ input:checked + .toggle-bg {
   margin-top: 1px;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .block {
   display: block;
 }
@@ -4214,6 +4218,11 @@ h1 {
   background-color: rgb(8 145 178 / var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-cyan-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 94 117 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:bg-cyan-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(22 78 99 / var(--tw-bg-opacity));
@@ -4392,6 +4401,11 @@ h1 {
 .dark .dark\:text-cyan-100 {
   --tw-text-opacity: 1;
   color: rgb(207 250 254 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-cyan-200 {
+  --tw-text-opacity: 1;
+  color: rgb(165 243 252 / var(--tw-text-opacity));
 }
 
 .dark .dark\:text-cyan-300 {
